Sigil v0.1.2 <ADD DATE>
    - inter-document HTML links are now fully supported (issue #53)
    - fixed rare issue where CSS style rules could get duplicated when changing views
    - fixed issue with inline style tags in OPS documents not being loaded (issue #58)
    - Sigil can now accept a file to load as the first command line argument; this also
    provides support for "Open With..." operating system features (issue #63)
    - fixed an issue where the reported build time in the About dialog was actually the execution time (issue #65)
    - loading of missing files in the recent files list is now improved (issue #57)
    - fixed a rare issue where the wrong view could be sent to the printer on print actions
    - Sigil now creates a guide element with a cover page in the OPF if the content of the first
    OPS document is less than 1000 characters long (issue #48)
    - support for importing UTF-16 encoded documents (not just UTF-8)
    - provided install target for linux; the binary is now also named "sigil"
    (lower case 's') on Unix systems (except Mac) for the sake of convention (issue #46)
    - removed dependency on "data" directory (issue #51)

Sigil v0.1.1 2009.08.06.
    - applied provided patch for NetBSD support
    - fixed issue with loading images in HTML and EPUB docs that have regexp special characters
    in filenames. (issue #39)
    - if headings have the 'title' attribute set, it is now used as the TOC text entry. (issue #26)
    - tags are now removed from headings before they are converted to TOC entries (issue #47)
    - Sigil now remembers the last folder from which you loaded an image (issue #34)
    - choosing 'cancel' in TOC editor now no longer forces the views to update
    - fixed bug with new headings getting existing IDs. (issue #36)
    - printing support! new file menu actions: "print" and "print preview"
    - fixed an issue when sometimes switching between views didn't enable/disable appropriate actions