@@ -1,4 +1,5 @@
 Sigil v0.1.2 <ADD DATE>
+    - SVG elements are not removed anymore (issue #24)
     - inter-document HTML links are now fully supported (issue #53)
     - fixed rare issue where CSS style rules could get duplicated when changing views
     - fixed issue with inline style tags in OPS documents not being loaded (issue #58)
